--- a/hw2.css
+++ b/hw2.css
@@ -51,6 +51,10 @@ header a{
     text-align: center;
 }
 
+.introduce{
+    text-align: left;
+}
+
 #porfile-img {
     width: 150px;
     height: 150px;
